--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="row">
                     <div class="col-lg-5">
                         <div class="about_thumb">
-                            <img src="IMG_4551.jpg" class="img-fluid">
+                            <img src="IMG_4551.JPG" class="img-fluid">
                         </div>
                     </div>
                     <div class="col-lg-7">
