--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="col-12">
                 <div class="section_title_area text-center">
                     <h2>Experience</h2>
-                    <p><span>In various parts of Web Design & Development</span></p>
+                    <p><span>In Web Design & Development</span></p>
                 </div>
             </div>
         </div>
