--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="custom.css" rel="stylesheet">
 </head>
@@ -69,12 +70,12 @@
             <div class="col-lg-10">
                 <div class="row">
                     <div class="col-lg-5">
-                        <div class="about_thumb">
-                            <img src="my-img.jpg" class="img-fluid">
+                        <div class="about_thumb" data-aos="fade-right">
+                            <img src="IMG_4551.jpg" class="img-fluid">
                         </div>
                     </div>
                     <div class="col-lg-7">
-                        <div class="about_info">
+                        <div class="about_info" data-aos="fade-left">
                             <h2>Hello,</h2>
                             <h3>I am a Web Developer</h3>
                             <p>I have been working as a freelancer from 2016 and have worked on many Wordpress projects starting from scratch to the end site required by client. I was born and bought in Jaipur. I did my schooling from IBIS. Then I did my engineering from JNU, Jaipur. I love to read, travel, listen music. I am a big time foody, always ready to eat out and try new cuisines and dishes. Also, I have a sweet tooth, that keeps me drooling for sweets.</p>
@@ -95,31 +96,31 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
-                <div class="skill_content">
+                <div class="skill_content" data-aos="flip-left" data-aos-duration="2000">
                     <h2 class="headline">My Skill</h2>
                     <p>Some the skills that I have learnt in the journey of 6 years. Apart from these 3, I also have worked on frameworks such as Laravel, Codeigniter and css frameworks which includes sass. I know jquery and javascript as well. I use photoshop as well in order to do some background or image editing.</p>
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="single_skill">
+                <div class="single_skill" data-aos="fade-up" data-aos-duration="3000">
                     <h3>Bootstrap <span>80%</span></h3>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
-                <div class="single_skill">
+                <div class="single_skill" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
                     <h3>Html5 <span>90%</span></h3>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
-                <div class="single_skill">
+                <div class="single_skill" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1800">
                     <h3>CSS3 <span>90%</span></h3>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
-                <div class="single_skill">
+                <div class="single_skill" data-aos="fade-left" data-aos-offset="500" data-aos-duration="1200">
                     <h3>Wordpress <span>85%</span></h3>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -137,7 +138,7 @@
         </div>
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center mb-30">
-                <div class="services-box box">
+                <div class="services-box box" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
                     <div class="icon mb-2">
                         <img class="img-fluid" src="mongodb.png">
                     </div>
@@ -148,7 +149,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6 text-center mb-30">
-                <div class="services-box box">
+                <div class="services-box box" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
                     <div class="icon mb-2">
                         <img class="img-fluid" src="angular.png">
                     </div>
@@ -159,7 +160,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6 text-center mb-30">
-                <div class="services-box box">
+                <div class="services-box box" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="1500">
                     <div class="icon mb-2">
                         <img class="img-fluid" src="nodejs.png">
                     </div>
@@ -169,7 +170,7 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center mb-30">
-                <div class="services-box box">
+                <div class="services-box box" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="1500">
                     <div class="icon mb-2">
                         <img class="img-fluid" src="react.png">
                     </div>
@@ -193,7 +194,7 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-md-6 mb-30">
-                <div class="services-box box">
+                <div class="services-box box" data-aos="zoom-in">
                     <div class="icon">
                         <i class="fa fa-paint-brush"></i>
                     </div>
@@ -205,7 +206,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 mb-30">
-                <div class="services-box box">
+                <div class="services-box box" data-aos="zoom-in-up">
                     <div class="icon">
                         <i class="fa fa-cogs"></i>
                     </div>
@@ -217,7 +218,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 mb-30">
-                <div class="services-box box">
+                <div class="services-box box" data-aos="zoom-in-down">
                     <div class="icon">
                         <i class="fa fa-camera"></i>
                     </div>
@@ -229,7 +230,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 xs-mb-30">
-                <div class="services-box box">
+                <div class="services-box box" data-aos="zoom-in-left">
                     <div class="icon">
                         <i class="fa fa-mobile-alt"></i>
                     </div>
@@ -241,7 +242,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 xs-mb-30">
-                <div class="services-box box">
+                <div class="services-box box" data-aos="zoom-in-right">
                     <div class="icon">
                         <i class="fa fa-chart-pie"></i>
                     </div>
@@ -253,7 +254,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6">
-                <div class="services-box box">
+                <div class="services-box box" data-aos="zoom-out-up">
                     <div class="icon">
                         <i class="fa fa-wrench"></i>
                     </div>
@@ -279,7 +280,9 @@
         </div>
         <div class="row justify-content-center portfolio_items_list">
             <div class="col-lg-4 col-md-6 grid brand print">
-                <div class="single_work">
+                <div class="single_work" data-aos="flip-left"
+                     data-aos-easing="ease-out-cubic"
+                     data-aos-duration="6000">
                     <img src="portfolio-1.png" alt="work" class="img-fluid">
                     <div class="work_info mt-3">
                         <h3>Symphony Software</h3>
@@ -288,7 +291,9 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 grid web">
-                <div class="single_work">
+                <div class="single_work" data-aos="flip-right"
+                     data-aos-easing="ease-out-cubic"
+                     data-aos-duration="1200">
                     <img src="portfolio-2.png" alt="work" class="img-fluid">
                     <div class="work_info mt-3">
                         <h3>Joveen</h3>
@@ -297,7 +302,9 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 grid graphic">
-                <div class="single_work">
+                <div class="single_work" data-aos="flip-left"
+                     data-aos-easing="ease-out-cubic"
+                     data-aos-duration="1800">
                     <img src="portfolio-3.png" alt="work"  class="img-fluid">
                     <div class="work_info mt-3">
                         <h3>Criss Angel</h3>
@@ -323,7 +330,8 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-4 col-md-6">
-                <div class="single_contact_info shadow__black">
+                <div class="single_contact_info shadow__black" data-aos="fade-up"
+                     data-aos-anchor-placement="top-bottom">
                     <span class="icon flaticon-placeholder"></span>
                     <div class="info">
                         <p>Shalimar Bagh, Jaipur, Rajasthan</p>
@@ -331,7 +339,8 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="single_contact_info shadow__black">
+                <div class="single_contact_info shadow__black" data-aos="fade-up"
+                     data-aos-anchor-placement="center-bottom">
                     <span class="icon flaticon-phone-call"></span>
                     <div class="info">
                         <p>Official Phone: 9829862221</p>
@@ -339,11 +348,12 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="single_contact_info shadow__black">
+                <div class="single_contact_info shadow__black" data-aos="fade-up"
+                     data-aos-anchor-placement="bottom-bottom">
                     <span class="icon flaticon-envelope"></span>
                     <div class="info">
                         <p>Email :
-                            <a href="mailto:bhanujallandhra@gmail.com">bhanujallandhra@gmail.com</a>
+                            <a href="mailto:pitar@example.com">bhanujallandhra@gmail.com</a>
                         </p>
 
                     </div>
@@ -375,7 +385,10 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/TypewriterJS/1.0.0/typewriter.min.js"></script>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
+    AOS.init();
     $(document).ready(function() {
         // Transition effect for navbar
         $(window).scroll(function() {
