--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="row">
                     <div class="col-lg-5">
                         <div class="about_thumb" data-aos="fade-right">
-                            <img src="IMG_4551.jpg" class="img-fluid">
+                            <img src="my-img.jpg" class="img-fluid">
                         </div>
                     </div>
                     <div class="col-lg-7">
